data/derived/comb/progs/unify/prog4229.ml.out
Characters 56-64:
  driver n/10 (n mod 10::ls)
  ^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
